--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     color: white;
     font-family: 'Outfit', sans-serif;
+    text-decoration: none;
 }
 body{
     background-color: rgb(255, 255, 255);
@@ -17,16 +18,38 @@ html::-webkit-scrollbar-thumb{
 }
 .navbar{
     background-color: rgb(20, 20, 20);
-    /* color: white; */
+    /* color: white; */;
+}
+.logo{
+    height: 50px;
+    display: inline;
+}
+li{
+    display: inline-block;
+    padding-left: 20%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-weight: bold;
+    font-size: 25px;
+}
+a:hover{
+    display: inline-block;
+    padding-left: 10%;
+    padding-right: 10%;
+    /* padding-top: 15px;
+    padding-bottom: 15px; */
+    font-weight: bold;
+    font-size: 25px;
+    background-color: black;
+    border-radius: 10px;
 }
 .welcome{
     /* background-image: url('Files/welc.jpg');*/
     background: linear-gradient(90deg, rgba(255,0,0,1) 20%, rgba(7,0,211,1) 100%);
     text-align: center;
     font-size: 200px;
-    background-position: center;
+    /* background-position: center; */
     height: 400px;
-    display: flex;
 }
 .about{
     font-size: 30px;
