--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,30 +18,32 @@ html::-webkit-scrollbar-thumb{
 }
 .navbar{
     background-color: rgb(20, 20, 20);
-    /* color: white; */;
+    display: grid;
+    
+    /* grid-template-columns:1fr 300px ; */
+    /* color: white; */
+    /* ; */
 }
-.logo{
-    height: 50px;
-    display: inline;
+/* .logo{
+    display: flex;
+    align-items: left;
+} */
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-li{
-    display: inline-block;
-    padding-left: 20%;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-weight: bold;
-    font-size: 25px;
+a{
+    padding: 1.5%;
+    font-size: 20px;
+    font-weight: 500;
 }
 a:hover{
-    display: inline-block;
-    padding-left: 10%;
-    padding-right: 10%;
-    /* padding-top: 15px;
-    padding-bottom: 15px; */
-    font-weight: bold;
-    font-size: 25px;
-    background-color: black;
-    border-radius: 10px;
+    padding: 1.5%;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: black;   
+    border-radius: 50px;
 }
 .welcome{
     /* background-image: url('Files/welc.jpg');*/
@@ -50,6 +52,16 @@ a:hover{
     font-size: 200px;
     /* background-position: center; */
     height: 400px;
+}
+@media only screen and (max-width: 600px) {
+    .welcome{
+        font-size: 90px;
+    }
+}
+@media only screen and (min-width: 1200px) {
+    .welcome{
+        font-size: 212px;
+    }
 }
 .about{
     font-size: 30px;
